--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,18 @@
-# Starter pipeline
-
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - master
 
+pr:
+  autoCancel: true
+  branches:
+    include:
+    - master
+
 pool:
   vmImage: 'ubuntu-latest'
+
+variables:
+  jdkVersion: '1.8'
+  jdkOptions: '-Xmx1024m -Xms256m'
 
 steps:
 - task: Gradle@2
@@ -18,8 +22,8 @@ steps:
     tasks: 'downloadDependencies --console plain'
     publishJUnitResults: false
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    gradleOptions: '-Xmx1024m -Xms256m'
+    jdkVersionOption: $(jdkVersion)
+    gradleOptions: $(jdkOptions)
     sonarQubeRunAnalysis: false
 
 - task: Gradle@2
@@ -30,6 +34,6 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/TEST-*.xml'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    gradleOptions: '-Xmx1024m -Xms256m'
+    jdkVersionOption: $(jdkVersion)
+    gradleOptions: $(jdkOptions)
     sonarQubeRunAnalysis: false
